--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ and <a href="http://pandas.pydata.org/">Pandas</a>.</p>
 <p>To install detex, first make sure that you have a working distribution of python 2.7. I recommend the <a href="http://continuum.io/downloads">Anaconda distribution</a>.
 Next, clone (or download) Detex and run the setupy.py by typing into the terminal (or command line if using windows)</p>
 
-<div class="highlight highlight-bash"><pre>Python setup.py install</pre></div>
+<div class="highlight highlight-bash"><pre>python setup.py install</pre></div>
 
 <p>The install script will make sure you have the required packages and install detex in the appropriate place. 
 Note: If the process fails to install basemap, which it has been known to do, you can find manual installation instructions <a href="http://matplotlib.org/basemap/users/installing.html">here</a>. Most of detex functionality does not require basemap so if you can’t get it working you can still use the majority of detex. </p>
